--- a/serverless.yaml
+++ b/serverless.yaml
@@ -1,26 +1,24 @@
-service: cryptostats-backend
+service: erp-backend
 
 useDotenv: true
 
 plugins:
   - serverless-offline
+  
+custom:
+    serverless-offline:
+    httpPort: 3400
+
+package:
+  exclude:
+    - 'node_modules/**'
+    - 'node_modules/node-fetch/**'
+  excludeDevDependencies: true
+  individually: true
 
 provider:
   name: aws
   runtime: nodejs12.x
-  environment:
-    MONGODB_URI: ${env:MONGODB_URI}
-
-    JWT_SECRET: ${env:JWT_SECRET}
-    JWT_EXPIRATION_TIME: ${env:JWT_EXPIRATION_TIME}
-
-    COINBASE_CLIENT_ID: ${env:COINBASE_CLIENT_ID}
-    COINBASE_CLIENT_SECRET: ${env:COINBASE_CLIENT_SECRET}
-    COINBASE_REDIRECT_URI: ${env:COINBASE_REDIRECT_URI}
-
-    ENCRYPTION_KEY: ${env:ENCRYPTION_KEY}
-
-    AUTH_REDIRECT_URI: ${env:AUTH_REDIRECT_URI}
 
 functions:
   main:
