--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "nest build && node dist/main",
     "migrate": "npx prisma migrate dev",
     "generate": "npx prisma generate dev",
     "studio": "npx prisma studio",
